--- a/site/Boots/index.html
+++ b/site/Boots/index.html
@@ -16,7 +16,9 @@
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
+    type="text/css">
+    <link rel="stylesheet" href="css/estilo.css">
 
   <!-- Plugin CSS -->
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
@@ -32,7 +34,9 @@
   <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">SDPIAR</a>
-      <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button"
+        data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
@@ -47,6 +51,9 @@
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contato">Contato</a>
           </li>
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#login">Login</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -57,7 +64,7 @@
     <div class="container">
       <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.png" alt="">
       <h1 class="text-uppercase mb-0">SDPIAR</h1>
-      <hr class="star-light">
+      <hr class="style1" > <br> 
       <h2 class="font-weight-light mb-0">Sistema de Detecção de Principios de Incêndios em Áreas Rurais</h2>
     </div>
   </header>
@@ -66,9 +73,9 @@
   <section class="portfolio" id="grafico">
     <div class="container">
       <h2 class="text-center text-uppercase text-secondary mb-0">Gráficos</h2>
-       <hr class="star-dark">
+      <hr class="star-dark">
       <div class="row">
-              <canvas id="myAreaChart"></canvas>
+        <canvas id="myAreaChart"></canvas>
       </div>
     </div>
   </section>
@@ -80,10 +87,21 @@
       <hr class="star-light mb-5">
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">A nossa empresa conta com uma equipe comprometida com resultados, altamente competente e talentosa, que foi capaz de desenvolver um sistema que realmente vai mudar o futuro de nosso planeta. Cada um de nossos consultores atua diretamente no desenvolvimento e atualização do nosso sistema, e também na implantação dele nas florestas. Nosso foco está principalmente ligado a vida das pessoas, e do meio ambiente, e consequentemente com nosso projeto, conseguimos evitar muitas perdas por causa do desastre natural, o que é muito comum acontecer quando um incendio florestal acontece. Nossa equipe possui forte experiência em ferramentas, Processos de Negócio, PPM, ALM, Garantia da Qualidade/Performance, Capacidade e Governança em TI.</p>
+          <p class="lead">A nossa empresa conta com uma equipe comprometida com resultados, altamente competente e
+            talentosa, que foi capaz de desenvolver um sistema que realmente vai mudar o futuro de nosso planeta. Cada
+            um de nossos consultores atua diretamente no desenvolvimento e atualização do nosso sistema, e também na
+            implantação dele nas florestas. Nosso foco está principalmente ligado a vida das pessoas, e do meio
+            ambiente, e consequentemente com nosso projeto, conseguimos evitar muitas perdas por causa do desastre
+            natural, o que é muito comum acontecer quando um incendio florestal acontece. Nossa equipe possui forte
+            experiência em ferramentas, Processos de Negócio, PPM, ALM, Garantia da Qualidade/Performance, Capacidade e
+            Governança em TI.</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">A empresa nasceu em 2019, no primeiro semestre do curso Análise e Desenvolvimento de Sistemas da Faculdade BandTec. Começamos com um grupo formado por 5 integrandes, no qual cada um desenvolveu uma parte do projeto, que era a nossa última entrega do semestre. Conseguimos aprovação pelos professores, melhoramos a nossa ideia, e hoje podemos atuar com o nosso sistema em qualquer local que sofrem com esses desastres.</p>
+          <p class="lead">A empresa nasceu em 2019, no primeiro semestre do curso Análise e Desenvolvimento de Sistemas
+            da Faculdade BandTec. Começamos com um grupo formado por 5 integrandes, no qual cada um desenvolveu uma
+            parte do projeto, que era a nossa última entrega do semestre. Conseguimos aprovação pelos professores,
+            melhoramos a nossa ideia, e hoje podemos atuar com o nosso sistema em qualquer local que sofrem com esses
+            desastres.</p>
         </div>
       </div>
       <div class="text-center mt-4">
@@ -108,28 +126,32 @@
             <div class="control-group">
               <div class="form-group floating-label-form-group controls mb-0 pb-2">
                 <label>Nome</label>
-                <input class="form-control" id="name" type="text" placeholder="Nome" required="required" data-validation-required-message="Please enter your name.">
+                <input class="form-control" id="name" type="text" placeholder="Nome" required="required"
+                  data-validation-required-message="Please enter your name.">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
             <div class="control-group">
               <div class="form-group floating-label-form-group controls mb-0 pb-2">
                 <label>Email</label>
-                <input class="form-control" id="email" type="email" placeholder="Email " required="required" data-validation-required-message="Please enter your email address.">
+                <input class="form-control" id="email" type="email" placeholder="Email " required="required"
+                  data-validation-required-message="Please enter your email address.">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
             <div class="control-group">
               <div class="form-group floating-label-form-group controls mb-0 pb-2">
                 <label>Telefone para contato</label>
-                <input class="form-control" id="phone" type="tel" placeholder="Telefone para contato" required="required" data-validation-required-message="Please enter your phone number.">
+                <input class="form-control" id="phone" type="tel" placeholder="Telefone para contato"
+                  required="required" data-validation-required-message="Please enter your phone number.">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
             <div class="control-group">
               <div class="form-group floating-label-form-group controls mb-0 pb-2">
                 <label>Digite sua dúvida</label>
-                <textarea class="form-control" id="message" rows="5" placeholder="Digite sua dúvida" required="required" data-validation-required-message="Please enter a message."></textarea>
+                <textarea class="form-control" id="message" rows="5" placeholder="Digite sua dúvida" required="required"
+                  data-validation-required-message="Please enter a message."></textarea>
                 <p class="help-block text-danger"></p>
               </div>
             </div>
@@ -144,14 +166,46 @@
     </div>
   </section>
 
+  <!--tela de login-->
+  <section class="bg-primary text-white mb-0" id="login">
+    <div class="container">
+      <h2 class="text-center text-uppercase text-white">Entre ou Cadastre-se <br> <br></h2>
+      <h4 class="text-center text-uppercase text-white">Você é uma pessoa : </h4>
+      <hr class="star-light mb-5"> 
+      <div class="row"> <br> <br>
+       
+        <div class="col-lg-4 ml-auto">
+          <p class="lead">
+            <div class="text-center mt-4">
+              <a class="btn btn-xl btn-outline-light" href="login.html">
+                <i class="fas  mr-2"></i>
+                Pessoa Jurídica
+              </a>
+            </div>
+          </p>
+        </div>
+        <div class="col-lg-4 mr-auto">
+          <p class="lead">
+            <div class="text-center mt-4">
+              <a class="btn btn-xl btn-outline-light" href="#">
+                <i class="fas  mr-2"></i>
+                Pessoa Física
+              </a>
+            </div>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Footer -->
   <footer class="footer text-center">
     <div class="container">
       <div class="row">
         <div class="col-md-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Localização</h4>
-          <p class="lead mb-0">Haddock Lobo 595    
-            <br> Cerqueira César, São Paulo - SP,<br>CEP  01419-002</p>
+          <p class="lead mb-0">Haddock Lobo 595
+            <br> Cerqueira César, São Paulo - SP,<br>CEP 01419-002</p>
         </div>
         <div class="col-md-4 mb-5 mb-lg-0">
           <h4 class="text-uppercase mb-4">Siga-nos nas redes sociais</h4>
@@ -170,8 +224,8 @@
         </div>
         <div class="col-md-4">
           <h4 class="text-uppercase mb-4">Ainda ficou com dúvidas ?</h4>
-          <p class="lead mb-0">Mande uma 
-            <a href="#contato">mensagem  </a>para nós.</p>
+          <p class="lead mb-0">Mande uma
+            <a href="#contato">mensagem </a>para nós.</p>
         </div>
       </div>
     </div>
@@ -205,8 +259,8 @@
   <!-- Custom scripts for this template -->
   <script src="js/freelancer.min.js"></script>
 
-    <!-- Page level plugins -->
-    <script src="vendor/chart.js/Chart.min.js"></script>
+  <!-- Page level plugins -->
+  <script src="vendor/chart.js/Chart.min.js"></script>
 
   <!-- Page level custom scripts -->
   <script src="js/demo/chart-area-demo.js"></script>
