--- a/site/Boots/login_juridico.html
+++ b/site/Boots/login_juridico.html
@@ -61,7 +61,7 @@
                   <hr>
                 
                   <div class="text-center">
-                    <a class="small" href="register.html">Não tem uma conta? Cadastre-se!</a>
+                    <a class="small" href="registro_juridico.html">Não tem uma conta? Cadastre-se!</a>
                   </div>
                 </div>
               </div>
