--- a/site/Boots/registro_juridico.html
+++ b/site/Boots/registro_juridico.html
@@ -37,10 +37,10 @@
               <form class="user">
                 <div class="form-group row">
                   <div class="col-sm-6 mb-3 mb-sm-0">
-                    <input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="Nome">
+                    <input type="text" class="form-control form-control-user" id="exampleFirstName" placeholder="Nome da empresa">
                   </div>
                   <div class="col-sm-6">
-                    <input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Sobrenome">
+                    <input type="text" class="form-control form-control-user" id="exampleLastName" placeholder="Nome do titular da empresa">
                   </div>
                 </div>
                 <div class="form-group">
@@ -51,18 +51,11 @@
                     <input type="password" class="form-control form-control-user" id="tel" placeholder="Telefone">
                   </div>
                   <div class="col-sm-6">
-                    <input type="password" class="form-control form-control-user" id="dataNasc" placeholder="Data de nascimento">
+                    <input type="password" class="form-control form-control-user" id="dataNasc" placeholder="CNPJ">
                   </div>
                 
                 </div>
-                <div class="form-group row">
-                  <div class="col-sm-6 mb-3 mb-sm-0">
-                    <input type="text" class="form-control form-control-user" id="cpf" placeholder="CPF">
-                  </div>
-                  <div class="col-sm-6">
-                    <input type="text" class="form-control form-control-user" id="cep" placeholder="CEP">
-                  </div>
-                </div>
+                
                 <div class="form-group">
                   <input type="email" class="form-control form-control-user" id="endereco" placeholder="Endereço da área que vai ser monitorada ">
                 </div>
