--- a/site/Boots/register.html
+++ b/site/Boots/register.html
@@ -28,7 +28,9 @@
       <div class="card-body p-0">
         <!-- Nested Row within Card Body -->
         <div class="row">
-          <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+          <div class="col-lg-5 d-none d-lg-block">
+            <img src="" alt="imagem de cadastro">
+          </div>
           <div class="col-lg-7">
             <div class="p-5">
               <div class="text-center">
@@ -68,7 +70,7 @@
                 </div>
                 <div class="form-group row">
                   <div class="col-sm-6 mb-3 mb-sm-0">
-                    <input type="password" class="form-control form-control-user" id="exampleInputPassword" placeholder="Usuário">
+                    <input type="text" class="form-control form-control-user" id="exampleInputPassword" placeholder="Usuário">
                   </div>
                   <div class="col-sm-6">
                     <input type="password" class="form-control form-control-user" id="exampleRepeatPassword" placeholder="Senha">
