--- a/site/Boots/index.html
+++ b/site/Boots/index.html
@@ -62,7 +62,7 @@
   <!-- Header -->
   <header class="masthead bg-gradient-success text-white text-center">
     <div class="container">
-      <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.png" alt="">
+      <img class="img-fluid mb-5 d-block mx-auto" src="img/sdpiar1.png" alt="">
       <h1 class="text-uppercase mb-0">SDPIAR</h1>
       <hr class="style1" > <br> 
       <h2 class="font-weight-light mb-0">Sistema de Detecção de Principios de Incêndios em Áreas Rurais</h2>
@@ -168,7 +168,6 @@
   <section class="bg-primary text-white mb-0" id="login">
     <div class="container">
       <h2 class="text-center text-uppercase text-white">Entre ou Cadastre-se <br> <br></h2>
-      <h4 class="text-center text-uppercase text-white">Você é uma pessoa : </h4>
       <hr class="style1"> 
       <div class="row"> <br> <br>
        
@@ -177,7 +176,7 @@
             <div class="text-center mt-4">
               <a class="btn btn-xl btn-outline-light" href="login.html">
                 <i class="fas  mr-2"></i>
-                Pessoa Física
+                Entrar
               </a>
             </div>
           </p>
@@ -185,9 +184,9 @@
         <div class="col-lg-4 mr-auto">
           <p class="lead">
             <div class="text-center mt-4">
-              <a class="btn btn-xl btn-outline-light" href="login_juridico.html">
+              <a class="btn btn-xl btn-outline-light" href="register.html">
                 <i class="fas  mr-2"></i>
-                Pessoa Jurídica
+                Cadastrar
               </a>
             </div>
           </p>
