--- a/site/Boots/register.html
+++ b/site/Boots/register.html
@@ -28,8 +28,8 @@
       <div class="card-body p-0">
         <!-- Nested Row within Card Body -->
         <div class="row">
-          <div class="col-lg-5 d-none d-lg-block">
-            <img src="https://www.ilzas.com.br/img/cadastro.png" alt="imagem de cadastro">
+          <div class="col-lg-5 d-none d-lg-block my-5">
+            <img src="cadastro.png" alt="imagem de cadastro">
           </div>
           <div class="col-lg-7">
             <div class="p-5">
