--- a/site/Boots/login.html
+++ b/site/Boots/login.html
@@ -34,7 +34,7 @@
             <!-- Nested Row within Card Body -->
             <div class="row">
               <div class="col-lg-5 d-none d-lg-block">
-                <img src="https://www.infinance.com.br/images/comofunciona/clientes.png" alt="imagem de cadastro">
+                <img src="clientes.png" alt="imagem de cadastro">
               </div>
               <div class="col-lg-6">
                 <div class="p-5">
