Atualização no index - Clientes

--- a/site/Boots/index.html
+++ b/site/Boots/index.html
@@ -43,7 +43,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#grafico">Gráficos </a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#grafico">Clientes </a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#sobre">Sobre Nós</a>
@@ -72,11 +72,20 @@
   <!-- Portfolio Grid Section -->
   <section class="portfolio" id="grafico">
     <div class="container">
-      <h2 class="text-center text-uppercase text-secondary mb-0">Gráficos</h2>
+      <h2 class="text-center text-uppercase text-secondary mb-0">Clientes</h2>
        <hr class="style2">
       <div class="row">
-        <div class="chart-area">
-          <canvas id="myAreaChart"></canvas>
+        <div class="col-3">
+          <img src="logo_eldorado.png" alt="">
+        </div>
+        <div class="col-3">
+          <img src="logo_iap.jpg" alt="">
+        </div>
+        <div class="col-3">
+          <img class="my-3" src="logo_ibama.png" alt="" style="width:80%">
+        </div>
+        <div class="col-3">
+          <img class="my-4" src="logo_inpe.jpg" alt="" style="width:80%">
         </div>
       </div>
     </div>
