--- a/site/Boots/blank_page(tests).html
+++ b/site/Boots/blank_page(tests).html
@@ -15,6 +15,24 @@
         <br><br>
 
         <button type="button" onclick="validate()">Validar</button>
+        <br><br>
+
+        <button type="button" onclick="testando_while()">Teste de variável com while</button>
+        <br><br>
+
+        <div id="div_mensagem1">a</div>
+
+        <div id="div_mensagem2">b</div>
+
+        <div id="div_mensagem3">c</div>
+
+        <div id="div_mensagem4">d</div>
+        <br><br>
+
+        <button type="button" onclick="testefc()">Teste sem while</button>
+        <br><br>
+
+        <div id="div_de_teste">e</div>
 
     </form>
 
@@ -28,6 +46,20 @@
         if ( test.checked ) {
             alert ( "Funcionou" ) ;
         }
+    }
+
+    function testando_while () {
+        var i = 1 ;
+        while ( i <= 4 ) {
+            var nome = "div_mensagem" + i ;
+            nome.innerHTML = "nome" ;
+            i++ ;
+        }
+    }
+
+    function testefc () {
+        var nome = "div_de_teste.innerHTML" ;
+        nome = "funcionou porra"
     }
 
 </script>
