--- a/site/Boots/login.html
+++ b/site/Boots/login.html
@@ -56,7 +56,7 @@
                         <label class="custom-control-label" for="customCheck">Lembrar senha</label>
                       </div>
                     </div>
-                    <a href="" class="btn btn-primary btn-user btn-block" onclick="validacao_login()">
+                    <a href="grafico.html" class="btn btn-primary btn-user btn-block" onclick="validacao_login()">
                       Entrar
                     </a>
                     <hr>
