--- a/site/Boots/login.html
+++ b/site/Boots/login.html
@@ -20,6 +20,8 @@
 
   <script src="validation_login.js"></script>
 
+  <script src="validation.cadastro.js"></script>
+
 </head>
 
 <body class="bg-gradient-primary">
