Correção no link do botão 'Entrar' na tela de login

--- a/documentacao/P&I/Sprint 2 - Todos os entregáveis/Site Institucional/login.html
+++ b/documentacao/P&I/Sprint 2 - Todos os entregáveis/Site Institucional/login.html
@@ -20,8 +20,6 @@
 
   <script src="validation_login.js"></script>
 
-  <script src="validation.cadastro.js"></script>
-
 </head>
 
 <body class="bg-gradient-primary">
@@ -58,7 +56,7 @@
                         <label class="custom-control-label" for="customCheck">Lembrar senha</label>
                       </div>
                     </div>
-                    <a href="grafico.html" class="btn btn-primary btn-user btn-block" onclick="validacao_login()">
+                    <a href="" class="btn btn-primary btn-user btn-block" onclick="validacao_login()">
                       Entrar
                     </a>
                     <hr>
