--- a/site/Boots/login.html
+++ b/site/Boots/login.html
@@ -20,7 +20,7 @@
 
   <script src="validation_login.js"></script>
 
-  <script src="validation.cadastro.js"></script>
+
 
 </head>
 
@@ -58,7 +58,7 @@
                         <label class="custom-control-label" for="customCheck">Lembrar senha</label>
                       </div>
                     </div>
-                    <a href="grafico.html" class="btn btn-primary btn-user btn-block" onclick="validacao_login()">
+                    <a href="" class="btn btn-primary btn-user btn-block" onclick="validacao_login()">
                       Entrar
                     </a>
                     <hr>
