--- a/site/Boots/grafico - teste.html
+++ b/site/Boots/grafico - teste.html
@@ -119,7 +119,6 @@
                     A área leste houve um incêndio, acionamos o corpo de bombeiros
                   </div>
                 </a>
-
                 <a class="dropdown-item text-center small text-gray-500" href="#">Exibir notificações anteriores</a>
               </div>
             </li>
@@ -291,7 +290,7 @@
             </div>
             
 
-
+            <!-- (d-none d-md-block) PARA FAZER SUMIR QUANDO ESTIVER MUITO PEQUENO -->
             <!-- Color System -->
             <div class="col-lg-3 mb-4 col-md-6 col-sm-6">
               <div class="card bg-primary text-white shadow">
