--- a/site/Boots/public/login.html
+++ b/site/Boots/public/login.html
@@ -58,9 +58,9 @@
                         <label class="custom-control-label" for="customCheck">Lembrar senha</label>
                       </div>
                     </div>
-                    <a href="" class="btn btn-primary btn-user btn-block" onclick="validacao_login()">
+                    <button type="button" class="btn btn-primary btn-user btn-block" onclick="validacao_login()">
                       Entrar
-                    </a>
+                    </button>
                     <hr>
                     
                   </form>
