--- a/site/Boots/public/index.html
+++ b/site/Boots/public/index.html
@@ -63,9 +63,9 @@
   </nav>
 
   <!-- Header -->
-  <header class="masthead bg-gradient-success text-white text-center">
+  <header class="masthead bg-gradient-success text-white text-center" style="background-image: url(img/bg4.jpg);">
     <div class="container">
-      <img class="img-fluid mb-5 d-block mx-auto" src="img/sdpiar1.png" alt="">
+      <img class="img-fluid mb-5 d-block mx-auto" src="img/sdpiar1.png">
       <h1 class="text-uppercase mb-0">SDPIAR</h1>
       <hr class="style1"> <br>
       <h2 class="font-weight-light mb-0">Sistema de Detecção de Principios de Incêndios em Áreas Rurais</h2>
@@ -130,7 +130,8 @@
   </section>
 
   <!-- Sobre nós -->
-  <section class="bg-primary text-white mb-0" id="sobre">
+  
+  <section class="bg-primary text-white mb-0" style="background-image: url(img/bg8i.jpg); background-size: cover; background-position: top center;" id="sobre">
     <div class="container">
       <h2 class="text-center text-uppercase text-white">Nossos Serviços e Contexto</h2>
       <hr class="style1">
