--- a/site/Boots/public/grafico.html
+++ b/site/Boots/public/grafico.html
@@ -216,7 +216,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">1º Quartil</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">0º</div>
+                      <div id="temp_quartil_um" class="h5 mb-0 font-weight-bold text-gray-800">0º</div>
                     </div>
                     <div class="col-auto">
                         <i class="fas fa-temperature-low fa-2x text-gray-300"></i>
@@ -248,7 +248,7 @@
                       <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                           <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">Mediana</div>
-                          <div class="h5 mb-0 font-weight-bold text-gray-800">0º</div>
+                          <div id="temp_mediana" class="h5 mb-0 font-weight-bold text-gray-800">0º</div>
                         </div>
                       <div class="col-auto">
                         <i class="fas fa-temperature-low fa-2x text-gray-300"></i>
@@ -346,7 +346,7 @@
                       <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                           <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Mediana</div>
-                          <div class="h5 mb-0 font-weight-bold text-gray-800">0%</div>
+                          <div id="umid_mediana" class="h5 mb-0 font-weight-bold text-gray-800">0%</div>
                         </div>
                       <div class="col-auto">
                           <i class="fas fa-tint fa-2x text-gray-300"></i>
