responsividade e organização das imagens

--- a/site/Boots/public/login.html
+++ b/site/Boots/public/login.html
@@ -38,7 +38,7 @@
             <!-- Nested Row within Card Body -->
             <div class="row">
               <div class="col-lg-5 d-none d-lg-block my-5">
-                <img src="clientes.png" alt="imagem de cadastro">
+                <img src="img/clientes.png" alt="imagem de cadastro">
               </div>
               <div class="col-lg-6">
                 <div class="p-5">
