--- a/site/Boots/public/register.html
+++ b/site/Boots/public/register.html
@@ -32,7 +32,7 @@
         <!-- Nested Row within Card Body -->
         <div class="row">
           <div class="col-lg-5 d-none d-lg-block my-5">
-            <img src="cadastro.png" alt="imagem de cadastro">
+            <img src="img/cadastro.png" alt="imagem de cadastro">
           </div>
           <div class="col-lg-7">
             <div class="p-5">
