Aula Yoshi - Gerando Gráfico a partir do Banco

--- a/site/Boots/public/grafico.html
+++ b/site/Boots/public/grafico.html
@@ -21,6 +21,7 @@
     <!-- Inserção manual de dados ( Simulação dos quartis ) -->
     <script src="simulacao_quartis.js"></script>
     <script src="interacoes_dashboard.js"></script>
+    <script src="select_banco_grafico.js"></script>
 
 </head>
 
@@ -46,7 +47,7 @@
           </button> -->
 
                     <a class="img-profile rounded-circle h1 mb-0" href="index.html">
-                        <img src="img/logo.png" width="100" height="100">
+                        <img src="img/logo.PNG" width="100" height="100">
                     </a>
 
 
@@ -170,7 +171,7 @@
                             </div><br>
 
                             <div class="text-center">
-                                <button class="btn-outline-success" onclick="gerar_dados()">Gerar Dados</button>
+                                <button class="btn-outline-success" onclick="inserir()">Gerar Dados</button>
                             </div>
                         </div>
                     </div>
