Mudança na página de cadastro

--- a/site/Boots/public/register.html
+++ b/site/Boots/public/register.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body class="bg-gradient-primary">
+<body id="corFundo" class="bg-gradient-primary">
 
   <div class="container">
 
@@ -34,7 +34,7 @@
         <!-- Nested Row within Card Body -->
         <div class="row">
           <div class="col-lg-5 d-none d-lg-block my-5">
-            <img src="img/cadastro.png" alt="imagem de cadastro">
+            <img id="imagemCadastro" class="trava" src="img/cadastro.png" alt="imagem de cadastro">
           </div>
           <div class="col-lg-7">
             <div class="p-5">
@@ -87,7 +87,7 @@
 
                 </div>
                 <!-- botao da pessoa fisica -->
-                <button type="button" class="btn btn-primary btn-user btn-block">Criar Conta</button>
+                <button id="botaoFisica" type="button" class="btn btn-primary btn-user btn-block">Criar Conta</button>
                 <hr>
               </form>
 
@@ -134,7 +134,7 @@
 
                 </div>
                 <!-- botao para a pessoa juridica -->
-                <button type="button" class="btn btn-primary btn-user btn-block">Criar Conta</button>
+                <button id="botaoJuridica" type="button" class="btn btn-primary btn-user btn-block">Criar Conta</button>
                 <hr>
 
               </form>
@@ -178,3 +178,9 @@
 </body>
 
 </html>
+
+<script>
+
+
+
+</script>
