--- a/site/Boots/public/grafico-chartjs.html
+++ b/site/Boots/public/grafico-chartjs.html
@@ -37,7 +37,7 @@
     function verificarAutenticacao() {
         usuario = sessionStorage.usuario_bandtec;
         if (usuario == undefined) {
-            window.location.href = 'login.html';
+            window.location.href = 'login-yoshi.html';
         } else {
             b_usuario.innerHTML = usuario;
         }
@@ -135,7 +135,7 @@
                         // dos atributos que vem no JSON 
                         // que gerou na consulta ao banco de dados
 
-                        dados.labels.push(registro.momento);
+                        dados.labels.push(registro.hora);
 
                         dados.datasets[0].data.push(registro.temperatura);
                         dados.datasets[1].data.push(registro.umidade);
