Css da tela de registro

--- a/site/Boots/public/register.html
+++ b/site/Boots/public/register.html
@@ -41,7 +41,7 @@
               </div>
               <div class="text-center  p-2 ">
                 <button class="btn btn-primary btn-user m-1" onclick="pf()" id="btpf">Pessoa Fisica</button><button
-                  class="btn btn-primary btn-user" onclick="pj()" id="btpj">Pessoa Jurídica</button>
+                  class="btn btn-primary btn-user" onclick="pj()" id="btpj" style="background-color: rgba(164,179,87,1)" >Pessoa Jurídica</button>
               </div>
               <form class="user" id="pessoaf" style="display: none;">
                 <div class="form-group controls">
