foto do william

--- a/site/Boots/public/index.html
+++ b/site/Boots/public/index.html
@@ -123,7 +123,7 @@
                         alt="" style="width:60%"> <b>Maurício</b> <br> Dev
                 </div>
                 <div class="col-lg-2 col-4 ml-auto mr-auto">
-                    <img class="my-3 img-fluid rounded-circle" src="will.jpg"
+                    <img class="my-3 img-fluid rounded-circle" src="img/will.jpg"
                         alt="" style="width:60%"><br> <b>William</b> <br> Dev
                 </div>
             </div>
