--- a/site/Boots/public/login.html
+++ b/site/Boots/public/login.html
@@ -104,7 +104,7 @@
 
   function verificarAutenticacao() {
     if (sessionStorage.usuario_bandtec != undefined) {
-      window.location.href = 'grafico-chartjs.html';
+      window.location.href = 'grafico.html';
     }
   }
 
