--- a/site/Boots/public/login.html
+++ b/site/Boots/public/login.html
@@ -95,6 +95,18 @@
   <!-- Custom scripts for all pages-->
   <script src="js/sb-admin-2.min.js"></script>
 
+  
+<script type="text/javascript">
+  var vsid = "sa82978";
+  (function() { 
+  var vsjs = document.createElement('script'); vsjs.type = 'text/javascript'; vsjs.async = true; vsjs.setAttribute('defer', 'defer');
+   vsjs.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'www.virtualspirits.com/vsa/chat-'+vsid+'.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(vsjs, s);
+  })();
+ </script>
+ 
+ 
+
 </body>
 
 </html>
