--- a/site/Boots/public/register.html
+++ b/site/Boots/public/register.html
@@ -169,6 +169,17 @@
   <script src="mask.js"></script>
   <script src="alternar_cadastro.js"></script>
   <script src="cadastrar.js"></script>
+  
+<script type="text/javascript">
+  var vsid = "sa82978";
+  (function() { 
+  var vsjs = document.createElement('script'); vsjs.type = 'text/javascript'; vsjs.async = true; vsjs.setAttribute('defer', 'defer');
+   vsjs.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'www.virtualspirits.com/vsa/chat-'+vsid+'.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(vsjs, s);
+  })();
+ </script>
+ 
+ 
 
 </body>
 
