--- a/site/Boots/public/index.html
+++ b/site/Boots/public/index.html
@@ -108,7 +108,7 @@
                 <br> <br>
                 <div class="col-1"></div>
                 <div class="col-lg-2 col-4 ml-auto mr-auto">
-                    <img class="my-3 img-fluid rounded-circle" src="Andisu.jpg"
+                    <img class="my-3 img-fluid rounded-circle" src="img/Andisu.jpg"
                         alt="" style="width:60%"> <b>Anderson</b> <br>P.O
                 </div>
                 <div class="col-lg-2 col-4 ml-auto mr-auto">
