Versão inicial da página de Admin. Validações do usuário admin já feitas nas páginas de login e dashboard. Feito ajuste no insert-banco para cadastrar o fk_usuario

--- a/site/Boots/public/login.html
+++ b/site/Boots/public/login.html
@@ -115,7 +115,9 @@
   verificarAutenticacao();
 
   function verificarAutenticacao() {
-    if (sessionStorage.usuario_bandtec != undefined) {
+    if (sessionStorage.usuario_bandtec == "Wilma") {
+      window.location.href = 'admin.html';
+    } else if (sessionStorage.usuario_bandtec != undefined) {
       window.location.href = 'grafico.html';
     }
   }
