--- a/site/Boots/public/login.html
+++ b/site/Boots/public/login.html
@@ -115,7 +115,7 @@
   verificarAutenticacao();
 
   function verificarAutenticacao() {
-    if (sessionStorage.usuario_bandtec == "Wilma") {
+    if (sessionStorage.usuario_bandtec == 'Wilma') {
       window.location.href = 'admin.html';
     } else if (sessionStorage.usuario_bandtec != undefined) {
       window.location.href = 'grafico.html';
