Agora o grafico aparece

--- a/site/Boots/public/grafico.html
+++ b/site/Boots/public/grafico.html
@@ -190,7 +190,7 @@
 
                                 <form class="px-4 py-3">
                                     <div class="form-group">
-                                        <label for="numero_area">Coloque abaixo a área que você deseja pesquisar</label>
+                                        <label for="n_area">Coloque abaixo a área que você deseja pesquisar</label>
                                         <input type="number" class="form-control" id="numero_area" name="numero_area"
                                             placeholder="1">
                                     </div>
@@ -624,7 +624,7 @@
 </html>
 
 <script>
-
+    
     verificarAutenticacao();
 
 </script>
