Help guys, colocar as informações dos quartis e das médias no site

--- a/site/Boots/public/grafico.html
+++ b/site/Boots/public/grafico.html
@@ -194,7 +194,7 @@
                                         <input type="number" class="form-control" id="numero_area" name="numero_area"
                                             placeholder="1">
                                     </div>
-                                    <button type="submit" class="btn btn-primary" onclick="alguma()">Mostrar
+                                    <button type="button" class="btn btn-primary" onclick="()">Mostrar
                                         dados</button>
                                 </form>
 
@@ -624,7 +624,7 @@
 </html>
 
 <script>
-    
+
     verificarAutenticacao();
 
 </script>
