--- a/site/Boots/public/index.html
+++ b/site/Boots/public/index.html
@@ -334,7 +334,7 @@
                                     ocorra um incêndio. Caso ocorra de o solo estar muito seco e quente a ponto de pegar
                                     fogo, nosso sistema acionará o corpo de bombeiros imediatamente, mostrando qual
                                     lugar está o incêndio. -->
-                                <img src="img/solucao.PNG" width="750px" class="img-fluid">
+                                <img src="img/HLD.PNG" width="750px" class="img-fluid">
 
                             </div>
 
