--- a/site/Boots/public/admin.html
+++ b/site/Boots/public/admin.html
@@ -69,7 +69,7 @@
                                 aria-labelledby="userDropdown">
 
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#" onclick="logoff()" data-toggle="modal"
+                                <a class="dropdown-item" href="#"  data-toggle="modal"
                                     data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i> Sair
                                 </a>
@@ -243,7 +243,7 @@
                         <div class="modal-body">Selecione "Sair" para voltar para tela de login.</div>
                         <div class="modal-footer">
                             <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
-                            <a class="btn btn-primary" href="login.html">Sair</a>
+                            <a class="btn btn-primary" href="#" onclick="logoff()">Sair</a>
                         </div>
                     </div>
                 </div>
@@ -294,7 +294,7 @@
     verificarAutenticacao();
 
     function verificarAutenticacao() {
-        usuario = sessionStorage.usuario_bandtec;
+        usuario = sessionStorage.nome_usuario_bandtec;
         if (usuario != "Wilma") {
             window.location.href = 'login.html';
         } else {
@@ -303,7 +303,7 @@
     }
 
     function logoff() {
-        sessionStorage.removeItem('usuario_bandtec');
+        sessionStorage.clear();
         verificarAutenticacao();
     }
 
