Atualização com todos os quartis funcionando e medianas mostrando no dashboard, além de um amém de brinde(que nossa apresentação seja ótima)

--- a/site/Boots/public/grafico.html
+++ b/site/Boots/public/grafico.html
@@ -127,7 +127,7 @@
 
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#" data-toggle="modal"
-                                    data-target="#logoutModal">
+                                    data-target="#logoutModal" onclick="logoff()">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i> Sair
                                 </a>
                             </div>
@@ -581,7 +581,7 @@
                         <div class="modal-body">Selecione "Sair" para voltar para tela de login.</div>
                         <div class="modal-footer">
                             <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
-                            <a class="btn btn-primary" href="#" onclick="logoff()">Sair</a>
+                            <a class="btn btn-primary" onclick="logoff()">Sair</a>
                         </div>
                     </div>
                 </div>
